BaSP-W07-2023: Sign Up and Login's fetch done.

--- a/Week-07/views/login.html
+++ b/Week-07/views/login.html
@@ -24,7 +24,7 @@
         <form id="form">
             <div class="sign-in">
                 <div class="title">
-                    <a href="/Week-06/views/index.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
+                    <a href="../views/index.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
                     <h1>
                         Sign In
                     </h1>
@@ -32,7 +32,7 @@
                 <div>
                     <input id="email" type="text" placeholder="Email">
                     <span class="error"></span>
-                </div>    
+                </div>
                 <div>
                     <input id="password" type="password" placeholder="Password">
                     <span class="error"></span>
