--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/reset.css">
-    <script defer src="../js/sign-up.js"></script>
+    
 </head>
 <body>
     <header>
@@ -80,16 +80,16 @@
                         <input type="text" id="postal" name="code">
                         <span class="error"></span>     
                     </div>
-                    <div class="sign-up">  
+                    <div class="sign-up">
                         <label for="password">Confirm Password:</label>
-                        <input type="password" id="password" name="password">
+                        <input type="password" id="passwordValid" name="password">
                         <span class="error"></span>
                     </div>
                 </div>
             </div>
-            <div class="btn-sign-up">   
+            <div class="btn-sign-up">
                 <button type="submit">Continue</button>
-            </div> 
+            </div>
         </form>
     </main>
     <footer class="footer">
@@ -102,5 +102,6 @@
             <a href="https://www.instagram.com/"><img src="/Assets/Images/instagram.png" alt="Instagram icon"></a>
         </div>
     </footer>
+    <script defer src="../js/sign-up.js"></script>
 </body>
 </html>
