BaSP-W07-2023: LocalStorage added to Sign Up, Fetch validated and corrections of index's path.

--- a/Week-07/views/login.html
+++ b/Week-07/views/login.html
@@ -14,17 +14,17 @@
 <body>
     <header>
         <h1 class="header-logo">
-            <a href="/Week-06/views/index.html"><img src="/Assets/Images/logo.png" alt="MegaRocket"></a>
+            <a href="../views/index.html"><img src="../../Assets/Images/logo.png" alt="MegaRocket"></a>
         </h1>
         <h1 class="btn-menu">
-            <img src="/Assets/Images/icon.png" alt="a menu icon">
+            <img src="../../Assets/Images/icon.png" alt="a menu icon">
         </h1>
     </header>
     <main class="main-login">
         <form id="form">
             <div class="sign-in">
                 <div class="title">
-                    <a href="../views/index.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
+                    <a href="../views/index.html"><img class="back" src="../../Assets/Images/arrow.png" alt="back"></a>
                     <h1>
                         Sign In
                     </h1>
@@ -43,7 +43,7 @@
                     </a>
                 </p>
                 <div class="remember">
-                    <img class="click" src="/Assets/Images/Enabled.png" alt="click">
+                    <img class="click" src="../../Assets/Images/enabled.png" alt="click">
                     <p>
                         Remember me
                     </p>
@@ -53,7 +53,7 @@
                         Don't you have an account?
                     </p>
                     <p>
-                        <a href="/Week-06/views/sign-up.html">
+                        <a href="../views/sign-up.html">
                             click here to become a member
                         </a>
                     </p>
@@ -69,9 +69,9 @@
             Copyright © 2023 MegaRocket SA. All rights reserved.
         </h5>
         <div class="social">
-            <a href="https://www.linkedin.com/"><img src="/Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
-            <a href="https://www.facebook.com/"><img src="/Assets/Images/facebook.png" alt="Facebooc icon"></a>
-            <a href="https://www.instagram.com/"><img src="/Assets/Images/instagram.png" alt="Instagram icon"></a>
+            <a href="https://www.linkedin.com/"><img src="../../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+            <a href="https://www.facebook.com/"><img src="../../Assets/Images/facebook.png" alt="Facebooc icon"></a>
+            <a href="https://www.instagram.com/"><img src="../../Assets/Images/instagram.png" alt="Instagram icon"></a>
         </div>
     </footer>
 </body>
