--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/reset.css">
-    
+    <script defer src="../js/sign-up.js"></script>
 </head>
 <body>
     <header>
         <h1 class="header-logo">
-            <a href="../views/index.html"><img src="/Assets/Images/logo.png" alt="MegaRocket"></a>
+            <a href="../views/index.html"><img src="../../Assets/Images/logo.png" alt="MegaRocket"></a>
         </h1>
         <h1 class="btn-menu">
-            <img src="/Assets/Images/icon.png" alt="a menu icon">
+            <img src="../../Assets/Images/icon.png" alt="a menu icon">
         </h1>
     </header>
     <main>
         <form id="form">
             <div class="sign-up-container">
                 <div class="title">
-                    <a href="../views/login.html"><img class="back" src="/Assets/Images/arrow.png" alt="back"></a>
+                    <a href="../views/login.html"><img class="back" src="../../Assets/Images/arrow.png" alt="back"></a>
                     <h1> 
                         Register
                     </h1>
@@ -36,7 +36,7 @@
                         <span class="error"></span>
                     </div>        
                     <div class="sign-up">
-                        <label for="surname">Surname:</label>
+                        <label for="name">Last Name:</label>
                         <input type="text" id="surname" name="surname">
                         <span class="error"></span>
                     </div>
@@ -97,11 +97,10 @@
             Copyright © 2023 MegaRocket SA. All rights reserved.
         </h5>
         <div class="social">
-            <a href="https://www.linkedin.com/"><img src="/Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
-            <a href="https://www.facebook.com/"><img src="/Assets/Images/facebook.png" alt="Facebooc icon"></a>
-            <a href="https://www.instagram.com/"><img src="/Assets/Images/instagram.png" alt="Instagram icon"></a>
+            <a href="https://www.linkedin.com/"><img src="../../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
+            <a href="https://www.facebook.com/"><img src="../../Assets/Images/facebook.png" alt="Facebook icon"></a>
+            <a href="https://www.instagram.com/"><img src="../../Assets/Images/instagram.png" alt="Instagram icon"></a>
         </div>
     </footer>
-    <script defer src="../js/sign-up.js"></script>
 </body>
 </html>
