BaSP-W07-2023: This commit is just to push some updates to then keep working from a desktop.

--- a/Week-07/views/index.html
+++ b/Week-07/views/index.html
@@ -25,7 +25,7 @@
                 <h3>
                     Menu
                 </h3>
-                <img src="../../Assets/Images/icon-2.png">
+                <img src="../../Assets/Images/iconn.png">
             </div>
             <nav>
                 <div class="sidebar-menu">
@@ -168,8 +168,8 @@
                         class="text-area" name="Description" placeholder="Your massage ...">
                     </textarea>
                     <div class="form-buttons">
-                        <button><img src="../../Assets/Images/clear.png" alt="a cross icon"></button>
-                        <button><img src="../../Assets/Images/send.png" alt="a send icon"></button>
+                        <button><img src="../../Assets/Images/Clear.png" alt="a cross icon"></button>
+                        <button><img src="../../Assets/Images/Send.png" alt="a send icon"></button>
                     </div>
                 </form>
             </section>
@@ -234,7 +234,7 @@
                 Copyright © 2023 MegaRocket SA. All rights reserved.
             </h5>
             <div class="social">
-                <a href="https://www.linkedin.com/"><img src="../../Assets/Images/linkedIn.png" alt="LinkedIn icon"></a>
+                <a href="https://www.linkedin.com/"><img src="../../Assets/Images/linkedin.png" alt="LinkedIn icon"></a>
                 <a href="https://www.facebook.com/"><img src="../../Assets/Images/facebook.png" alt="Facebooc icon"></a>
                 <a href="https://www.instagram.com/"><img src="../../Assets/Images/instagram.png" alt="Instagram icon"></a>
             </div>
