BaSP-W07-2023: Login and Sign Up finished. Readme updated. Requirements document updated. Index's paths corrected.

--- a/Week-07/views/index.html
+++ b/Week-07/views/index.html
@@ -14,10 +14,10 @@
     <body class="body">
         <header>
             <h1 class="header-logo">
-                <a href="../views/index.html"><img src="../../Assets/Images/logo.png" alt="MegaRocket"></a>
+                <a href="../views/index.html"><img src="../../Assets/Images/Logo.png" alt="MegaRocket"></a>
             </h1>
             <h1 class="btn-menu">
-                <img src="../../Assets/Images/icon.png" alt="a menu icon">
+                <img src="../../Assets/Images/Icon.png" alt="a menu icon">
             </h1>
         </header>
         <aside>
@@ -51,11 +51,11 @@
                     <div class="contact-img">
                         <ul class="contact-id">
                             <div class="contact-img">
-                                <img src="../../Assets/Images/mail.png" alt="a letter icon">
+                                <img src="../../Assets/Images/Mail.png" alt="a letter icon">
                                 <li>
                                     information@untitled.tld
                                 </li>
-                                <img src="../../Assets/Images/cellphone.png" alt="a celphone icon">
+                                <img src="../../Assets/Images/Cellphone.png" alt="a celphone icon">
                                 <li>
                                     (000) 00000-0000
                                 </li>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="options">
                     <div class="titles">
-                        <img src="../../Assets/Images/membership.png" alt="a membership icon">
+                        <img src="../../Assets/Images/Membership.png" alt="a membership icon">
                         <h3>
                             Our memberships
                         </h3>
