--- a/Week-07/views/login.html
+++ b/Week-07/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>MegaRocket | Login</title>
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
@@ -14,10 +14,10 @@
 <body>
     <header>
         <h1 class="header-logo">
-            <a href="../views/index.html"><img src="../../Assets/Images/logo.png" alt="MegaRocket"></a>
+            <a href="../views/index.html"><img src="../../Assets/Images/Logo.png" alt="MegaRocket"></a>
         </h1>
         <h1 class="btn-menu">
-            <img src="../../Assets/Images/icon.png" alt="a menu icon">
+            <img src="../../Assets/Images/Icon.png" alt="a menu icon">
         </h1>
     </header>
     <main class="main-login">
