--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -14,10 +14,10 @@
 <body>
     <header>
         <h1 class="header-logo">
-            <a href="../views/index.html"><img src="../../Assets/Images/logo.png" alt="MegaRocket"></a>
+            <a href="../views/index.html"><img src="../../Assets/Images/Logo.png" alt="MegaRocket"></a>
         </h1>
         <h1 class="btn-menu">
-            <img src="../../Assets/Images/icon.png" alt="a menu icon">
+            <img src="../../Assets/Images/Icon.png" alt="a menu icon">
         </h1>
     </header>
     <main>
