BaSP-W07-2023: Last correction on the link from Sign Up to Landing.

--- a/Week-07/views/sign-up.html
+++ b/Week-07/views/sign-up.html
@@ -24,7 +24,7 @@
         <form id="form">
             <div class="sign-up-container">
                 <div class="title">
-                    <a href="../views/login.html"><img class="back" src="../../Assets/Images/arrow.png" alt="back"></a>
+                    <a href="../views/index.html"><img class="back" src="../../Assets/Images/arrow.png" alt="back"></a>
                     <h1> 
                         Register
                     </h1>
